# Zerust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark_results.md
.github/workflows/: rust.yml
examples/: benchmark_server.rs  echo_client.rs  echo_server.rs  echo_server_v1.rs
src/: config.rs  connection.rs  datapack.rs  error.rs  lib.rs  main.rs  metrice.rs  request.rs  response.rs  router.rs  server.rs  worker.rs
zinx_benchmark/: benchmark_result_zinx.txt  benchmark_server.go  go.mod  go.sum  main.go  simple_client.go  simple_server.go  zinx_benchmark.go
zinx_benchmark/conf/: zinx.json
