[package]
name = "zerust"
version = "1.0.0"
edition = "2024"
authors = ["wuzu zhao yitongwuzu1992@gmail.com"]
description = "Zero-cost Zinx for Rust"
license = "MIT"
repository = "https://github.com/zhaowuzu/Zerust"

[dependencies]
thiserror = "2.0.12"
dashmap = "7.0.0-rc2"
byteorder = "1.5.0"
tokio = {version = "1.47.1",features = ["full"]}
